# beetles-in-flight

./: .gitignore  README.md  hello.py  pyproject.toml
code/: Untitled-1.ipynb  btlflt.html  btlflt.ipynb  btlflt.py  index.html  masks.ipynb  otsu.py  search.js  tf.ipynb
docs/source/: conf.py  index.rst
