[project]
name = "beetles-in-flight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "icecream>=2.1.4",
    "matplotlib>=3.10.0",
    "opencv-python>=4.11.0.86",
    "yt-dlp>=2025.1.26",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
