[project]
name = "beetles-in-flight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celluloid>=0.2.0",
    "icecream>=2.1.4",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.10.0",
    "opencv-python>=4.11.0.86",
    "scipy>=1.15.1",
    "yt-dlp>=2025.1.26",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
