[project]
name = "beetles-in-flight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celluloid>=0.2.0",
    "ffmpeg-python>=0.2.0",
    "icecream>=2.1.4",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.10.0",
    "opencv-python>=4.11.0.86",
    "pdoc3>=0.11.5",
    "scipy>=1.15.1",
    "sphinx>=8.1.3",
    "yt-dlp>=2025.1.26",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
